# prems-jarvis-hermes

./: .gitignore  README.md  jarvis_boot.cmd  jarvis_loop.cmd  main.py  page.html  pyproject.toml  pytest.ini  requirements.txt  supervise.py  watchdog.py
.github/workflows/: ci.yml  verify_ci.py
jarvis/: __init__.py  cli.py  dashboard.py  install.py  serve.py
jarvis/core/: __init__.py  cycle.py  defaults.py  dispatcher.py  hermes_launcher.py  logging.py  monitor.py  planner.py  recovery.py  state.py  verifier.py
jarvis/prompts/: cycle_prompt.md
jarvis/templates/: dashboard.html
tests/: test_cycle_monitor.py  test_logging_watchdog.py  test_planner_dispatcher.py  test_recovery.py  test_state.py  test_verifier.py
